// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Outline 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-b2xe0w"
    color="default"
    disabled={false}
  >
    DEFAULT
  </button>
  <button
    className="css-1f6aabl"
    color="primary"
    disabled={false}
  >
    PRIMARY
  </button>
  <button
    className="css-e8164u"
    color="secondary"
    disabled={false}
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button Solid 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-1a6mu84"
    color="default"
    disabled={false}
  >
    DEFAULT
  </button>
  <button
    className="css-7uqfvn"
    color="primary"
    disabled={false}
  >
    PRIMARY
  </button>
  <button
    className="css-1tgz823"
    color="secondary"
    disabled={false}
  >
    SECONDARY
  </button>
</div>
`;

exports[`Storyshots Button Text 1`] = `
<div
  className="css-1tba8mc"
>
  <button
    className="css-4prdkn"
    color="default"
    disabled={false}
  >
    DEFAULT
  </button>
  <button
    className="css-x7aeqm"
    color="primary"
    disabled={false}
  >
    PRIMARY
  </button>
  <button
    className="css-1o4bz8g"
    color="secondary"
    disabled={false}
  >
    SECONDARY
  </button>
</div>
`;
